--- a/layouts/partials/tag.html
+++ b/layouts/partials/tag.html
@@ -1,2 +1,2 @@
-<!-- layouts/partials/tag.html -->
+{{- /*<!-- layouts/partials/tag.html -->*/ -}}
 <a href="{{ .Permalink }}" class="tag" rel="tag" data-count="">{{ if (i18n .Title ) }}{{ (i18n .Title ) }}{{ else }}{{ .Title }}{{ end }}</a>
